fixing a layout issue

--- a/Core/Assets/webroot/css/admin_nav.css
+++ b/Core/Assets/webroot/css/admin_nav.css
@@ -428,6 +428,10 @@ form fieldset,
 		border-color:#c3c9ce;
 		color:#333;
 	}
+	
+.dashboard.full {
+	clear: both;
+}
 
 /**
 	pagination
